--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit
-Pillow
-numpy
-torch
-opencv-python-headless
-basicsr
-realesrgan
-requests
+streamlit==1.26.0
+Pillow==10.0.0
+numpy==1.24.4
+torch==2.1.2
+opencv-python-headless==4.8.0.74
+git+https://github.com/cszn/basicsr.git@master
+git+https://github.com/xinntao/Real-ESRGAN.git
