--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.26.0
-Pillow==10.0.0
-numpy==1.24.4
-torch==2.1.2
-opencv-python-headless==4.8.0.74
+streamlit
+Pillow
+numpy
+torch
+opencv-python-headless
 git+https://github.com/cszn/basicsr.git@master
 git+https://github.com/xinntao/Real-ESRGAN.git
