--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
 Pillow
 numpy
-torch
+torch==2.2.2
 opencv-python-headless
 git+https://github.com/xinntao/BasicSR.git@master
 realesrgan
